# ros-launch-parent

./: LICENSE  README.md  package.xml  setup.py
src/launch_parent/: launch_parent.py  node_proxy.py
