<?xml version="1.0"?>
<package format="2">
  <name>launch_parent</name>
  <version>0.0.0</version>
  <description>The launch_parent package</description>

  <maintainer email="liamondrop@gmail.com">Liam</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>rosgraph</depend>
  <depend>roslaunch</depend>
</package>